package com.mygdx.game.simulation;

public class TrafficSimulationException extends Exception{
    TrafficSimulationException(){}
    TrafficSimulationException(String msg){
        super(msg);
    }
}
